changed for heroku app

--- a/thanks.html
+++ b/thanks.html
@@ -21,12 +21,12 @@
             <img src="images/logo.png" class="navimage" alt="" />
           </div>
           <ul class="newnavbar">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li>
-              <a href="index.html#four">What is Piddly</a>
+              <a href="home.html#four">What is Piddly</a>
             </li>
-            <li><a href="index.html#twotwo">How it Works</a></li>
-            <li><a href="index.html#one">Who it Benefits</a></li>
+            <li><a href="home.html#twotwo">How it Works</a></li>
+            <li><a href="home.html#one">Who it Benefits</a></li>
           </ul>
         </nav>
       </div>
@@ -53,10 +53,10 @@
                 <h3>Useful Links</h3>
               </header>
               <ul style="list-style: none;">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#four">What is Piddly?</a></li>
-                <li><a href="index.html#twotwo">How Piddly Works</a></li>
-                <li><a href="index.html#one">Who Piddly benefits</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="home.html#four">What is Piddly?</a></li>
+                <li><a href="home.html#twotwo">How Piddly Works</a></li>
+                <li><a href="home.html#one">Who Piddly benefits</a></li>
               </ul>
 
             </section>
