--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 						<img src="images/logo.png" class="navimage" alt="" />
 					</div>
 					<ul class="newnavbar">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="#">Home</a></li>
 						<li>
 							<a href="#four">What is Piddly</a>
 						</li>
