changes based on feedback

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Eliminating Expensive $20 ATM Withdrawls, <br> $5 at a Time</h2>
+				<h2>Eliminating Expensive $20 ATM Withdrawals, <br> $5 at a Time</h2>
 				<div class="image dollarpic">
 						<img src="images/video_icon.png" class="" alt="" />
 					</div>
@@ -60,6 +60,8 @@
 			</section>
 
 		<!--  iphone section -->
+
+
 				<section id="twotwo" class="wrapper style1">
 					<div class="inner">
 						<div class="container">
@@ -70,40 +72,74 @@
 
 						<div class="features">
 							<ul class="left">
-								<li class="icon alt fa-usd">
-									<span class="label">Link</span>
-									You need to get</br> $5 in cash.
+
+								<li>
+									<div class="box alt">
+										<div class="row 50% uniform rowfat">
+											<div class="4u"><span class="image fit"><img src="images/asd.png" class="oldicons" alt="" /></span></div>
+											<div class="8u$ topbump"><p class="whiteout">You're in need of $5 in cash</p></div>
+										</div>
+									</div>
 								</li>
-								<li class="icon alt fa-mobile">
-									<span class="label">Gavel</span>
-									You log onto the Piddly app and select your bank.
+
+								<li>
+									<div class="box alt">
+										<div class="row 50% uniform rowfat">
+											<div class="4u"><span class="image fit"><img src="images/bank.png" class="oldicons" alt="" /></span></div>
+											<div class="8u$ topbump"><p class="whiteout">You log onto the Piddly app and select your bank</p></div>
+										</div>
+									</div>
 								</li>
-								<li class="icon alt fa-credit-card-alt">
-									<span class="label">User</span>
-									You fund Piddly account with $5 drafted from checking.
+
+								<li>
+									<div class="box alt">
+										<div class="row 50% uniform rowfat">
+											<div class="4u"><span class="image fit"><img src="images/wallet.png" class="oldicons" alt="" /></span></div>
+											<div class="8u$ topbump"><p class="whiteout">You fund Piddly account with $5 drafted from debit card</p></div>
+										</div>
+									</div>
 								</li>
+
 							</ul>
+
 							<div class="image dollarpic">
-								<img src="images/iphone.png" class="iphonepic" alt="" />
+								<img src="images/two_phones.svg" class="iphonepic" alt="" />
 							</div>
 							<ul class="right">
-								<li class="icon alt fa-building">
-									<span class="label">Plane</span>
-									Piddly issues you a unique code that you take to a Piddly merchant.
+
+								<li>
+									<div class="box alt">
+										<div class="row 50% uniform rowfat">
+											<div class="8u topbump"><p class="whiteout">Piddly issues you a unique code that you take to a Piddly merchant</p></div>
+											<div class="4u$"><span class="image fit"><img src="images/check.png" class="oldicons ricky" alt="" /></span></div>
+										</div>
+									</div>
 								</li>
-								<li class="icon alt fa-exchange">
-									<span class="label">Rocket</span>
-									The merchant verifies your code in the point of sales system.
+
+								<li>
+									<div class="box alt">
+										<div class="row 50% uniform rowfat">
+											<div class="8u topbump"><p class="whiteout">The merchant verifies your code in the point of sales system</p></div>
+											<div class="4u$"><span class="image fit"><img src="images/register.png" class="oldicons ricky" alt="" /></span></div>
+										</div>
+									</div>
 								</li>
-								<li class="icon alt fa-money">
-									<span class="label">Cog</span>
-									Once the code is validated, the cashier gives you the $5.
+
+								<li>
+									<div class="box alt">
+										<div class="row 50% uniform rowfat">
+											<div class="8u topbump"><p class="whiteout">Once the code is validated, the cashier gives you the $5</p></div>
+											<div class="4u$"><span class="image fit"><img src="images/dollars.png" class="oldicons ricky" alt="" /></span></div>
+										</div>
+									</div>
 								</li>
+
 							</ul>
 						</div>
 					</div>
 					</div>
 				</section>
+
 
 		<!-- One -->
 			<section id="one" class="wrapper style1">
@@ -118,14 +154,12 @@
 								<header class="major" style="padding-top: 3em;">
 									<h2>Consumers</h2>
 								</header>
-								<ul style="text-align: left;">
-									<li>No longer have to pay huge ATM fees.</li>
-									<li>No longer need to withdraw the $20 ATM minimum</li>
-									<li>Gives you the opportunity to withdraw $5 or $10.</li>
-									<li>Saves you time and money from having to break a $20 bill because of the $20 ATM minimum.</li>
-									<li>Reduces your cash usage.</li>
-									<li>Reduces ATM card skimming.</li>
-								</ul>
+								<ol style="text-align: left;">
+									<p>Saves up to $4.57</p>
+									<li>No more ATM fees</li>
+									<li>No more withdrawing excess cash</li>
+									<li>Eliminates the hassle of breaking a $20 for smaller cash denominations</li>
+								</ol>
 
 							</div>
 							<div class="6u$ 12u$(medium) lilbump" style="text-align: center;">
@@ -133,14 +167,13 @@
 								<header class="major" style="padding-top: 3em;">
 									<h2>Small Banks</h2>
 								</header>
-								<ul style="text-align: left;">
-									<li>Eliminates the need to reimburse ATM surcharge fees.</li>
-									<li>Eliminates the need to pay interchange fees to the ATM owner.</li>
-									<li>Gives your customers an opportunity to withdraw $5 or $10.</li>
-									<li>Helps recoup interchange fees lost because of the $20 ATM minimum.</li>
-									<li>Reduces cash usage.</li>
-									<li>Reduces ATM card skimming.</li>
-								</ul>
+								<ol style="text-align: left;">
+									<p>Saves up to $6.50</p>
+									<li>Eliminates ATM reimbursement fees</li>
+									<li>Eliminates reverse ATM interchange fees</li>
+									<li>Increases interchange revenue </li>
+									<li>Reduces cash usage </li>
+								</ol>
 							</div>
 
 
@@ -149,14 +182,12 @@
 								<header class="major" style="padding-top: 3em;">
 									<h2>Big Banks</h2>
 								</header>
-								<ul style="text-align: left;">
-									<li>No longer have to pay huge ATM fees.</li>
-									<li>No longer need to withdraw the $20 ATM minimum</li>
-									<li>Gives you the opportunity to withdraw $5 or $10.</li>
-									<li>Saves you time and money from having to break a $20 bill because of the $20 ATM minimum.</li>
-									<li>Reduces your cash usage.</li>
-									<li>Reduces ATM card skimming.</li>
-								</ul>
+								<ol style="text-align: left;">
+									<p>Saves up to $1.75</p>
+									<li>Increases interchange revenue</li>
+									<li>Eliminates reverse ATM interchange fees</li>
+									<li>Reduces cash usage</li>
+								</ol>
 
 							</div>
 							<div class="6u$ 12u$(medium)" style="text-align: center; margin-top: 4em;">
@@ -164,14 +195,11 @@
 								<header class="major" style="padding-top: 3em;">
 									<h2>Credit Card Networks</h2>
 								</header>
-								<ul style="text-align: left;">
-									<li>Eliminates the need to reimburse ATM surcharge fees.</li>
-									<li>Eliminates the need to pay interchange fees to the ATM owner.</li>
-									<li>Gives your customers an opportunity to withdraw $5 or $10.</li>
-									<li>Helps recoup interchange fees lost because of the $20 ATM minimum.</li>
-									<li>Reduces cash usage.</li>
-									<li>Reduces ATM card skimming.</li>
-								</ul>
+								<ol style="text-align: left;">
+									<p>Saves up to 5 swipe fee transactions</p>
+									<li>Increases interchange revenue</li>
+									<li>Reduces cash usage</li>
+								</ol>
 							</div>
 
 						</div>
@@ -219,7 +247,7 @@
 								<li><a href="#">Home</a></li>
 								<li><a href="#four">What is Piddly?</a></li>
 								<li><a href="#twotwo">How Piddly Works</a></li>
-								<li><a href="#one">Who Piddly benefits</a></li>
+								<li><a href="#one">Who Piddly Benefits</a></li>
 							</ul>
 
 						</section>
