by the numbers section fully responsive

--- a/home.html
+++ b/home.html
@@ -154,12 +154,11 @@
 								<header class="major" style="padding-top: 3em;">
 									<h2>Consumers</h2>
 								</header>
-								<ol style="text-align: left;">
-									<p>Saves up to $4.57</p>
+								<ul style="text-align: left;">
 									<li>No more ATM fees</li>
 									<li>No more withdrawing excess cash</li>
 									<li>Eliminates the hassle of breaking a $20 for smaller cash denominations</li>
-								</ol>
+								</ul>
 
 							</div>
 							<div class="6u$ 12u$(medium) lilbump" style="text-align: center;">
@@ -167,13 +166,12 @@
 								<header class="major" style="padding-top: 3em;">
 									<h2>Small Banks</h2>
 								</header>
-								<ol style="text-align: left;">
-									<p>Saves up to $6.50</p>
+								<ul style="text-align: left;">
 									<li>Eliminates ATM reimbursement fees</li>
 									<li>Eliminates reverse ATM interchange fees</li>
 									<li>Increases interchange revenue </li>
 									<li>Reduces cash usage </li>
-								</ol>
+								</ul>
 							</div>
 
 
@@ -182,12 +180,11 @@
 								<header class="major" style="padding-top: 3em;">
 									<h2>Big Banks</h2>
 								</header>
-								<ol style="text-align: left;">
-									<p>Saves up to $1.75</p>
+								<ul style="text-align: left;">
 									<li>Increases interchange revenue</li>
 									<li>Eliminates reverse ATM interchange fees</li>
 									<li>Reduces cash usage</li>
-								</ol>
+								</ul>
 
 							</div>
 							<div class="6u$ 12u$(medium)" style="text-align: center; margin-top: 4em;">
@@ -195,11 +192,10 @@
 								<header class="major" style="padding-top: 3em;">
 									<h2>Credit Card Networks</h2>
 								</header>
-								<ol style="text-align: left;">
-									<p>Saves up to 5 swipe fee transactions</p>
+								<ul style="text-align: left;">
 									<li>Increases interchange revenue</li>
 									<li>Reduces cash usage</li>
-								</ol>
+								</ul>
 							</div>
 
 						</div>
@@ -213,21 +209,50 @@
 			<section id="one" class="wrapper style1" style="background-color: #E1E0E2;">
 				<div class="container">
 					<section class="feature">
-						<div class="row 200%">
-							<div class="6u 12u$(medium)">
-								<header class="major">
-									<h2>By the Numbers</h2>
-									<p>Aliquam commodo sed magna</p>
-								</header>
-								<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quisgravida id, est. Sed lectuisto. Praesent lorem ipsum dolor sit amet blandit elementum hendrerit dolor sit amet feugiat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing.</p>
+						<h2 class="bythenumbersheading">By the Numbers</h2>
 
-							</div>
-							<div class="6u$ 12u$(medium) important(medium)">
-								<span class="image fit">
-									<img src="images/vectorpic.svg" alt="" />
-								</span>
-							</div>
-						</div>
+
+
+
+
+								<div class="features bythenumberssection">
+
+									<div class="content bigbump">
+										<span class="image fit mygreenicons">
+											<img src="images/transactions.png" class="bythenumbersicons" alt="" />
+										</span>
+										<p class="littlesmaller">Transactions:</p>
+										<h2 class="littlebigger">66%</h2>
+										<p>under $10 made in cash</p>
+
+									</div>
+
+
+									<div class="content bigbump">
+										<span class="image fit mygreenicons">
+											<img src="images/marketsize.png" class="bythenumbersicons" alt="" />
+										</span>
+										<p class="littlesmaller">Market size:</p>
+										<h2 class="littlebigger">$2.2 Trillion</h2>
+										<p>only two ways to withdrawal $5 or $10</p>
+									</div>
+
+
+									<div class="content babybump">
+										<span class="image fit mygreenicons">
+											<img src="images/lostrevenue.png" class="bythenumbersicons" alt="" />
+										</span>
+										<p class="littlesmaller">Lost Revenue:</p>
+										<h2 class="littlebigger">Billions</h2>
+										<p>due to $20 ATM withdrawals</p>
+									</div>
+
+
+								</div>
+
+
+
+
 					</section>
 
 				</div>
