--- a/home.html
+++ b/home.html
@@ -155,6 +155,7 @@
 									<h2>Consumers</h2>
 								</header>
 								<ul style="text-align: left;">
+									<p class="savestext">Saves up to $4.57</p>
 									<li>No more ATM fees</li>
 									<li>No more withdrawing excess cash</li>
 									<li>Eliminates the hassle of breaking a $20 for smaller cash denominations</li>
@@ -167,6 +168,7 @@
 									<h2>Small Banks</h2>
 								</header>
 								<ul style="text-align: left;">
+									<p class="savestext">Saves up to $4.57</p>
 									<li>Eliminates ATM reimbursement fees</li>
 									<li>Eliminates reverse ATM interchange fees</li>
 									<li>Increases interchange revenue </li>
@@ -181,6 +183,7 @@
 									<h2>Big Banks</h2>
 								</header>
 								<ul style="text-align: left;">
+									<p class="savestext">Saves up to $4.57</p>
 									<li>Increases interchange revenue</li>
 									<li>Eliminates reverse ATM interchange fees</li>
 									<li>Reduces cash usage</li>
@@ -193,6 +196,7 @@
 									<h2>Credit Card Networks</h2>
 								</header>
 								<ul style="text-align: left;">
+									<p class="savestext">Saves up to $4.57</p>
 									<li>Increases interchange revenue</li>
 									<li>Reduces cash usage</li>
 								</ul>
