updated savings text

--- a/home.html
+++ b/home.html
@@ -168,7 +168,7 @@
 									<h2>Small Banks</h2>
 								</header>
 								<ul style="text-align: left;">
-									<p class="savestext">Saves up to $4.57</p>
+									<p class="savestext">Saves up to $6.50</p>
 									<li>Eliminates ATM reimbursement fees</li>
 									<li>Eliminates reverse ATM interchange fees</li>
 									<li>Increases interchange revenue </li>
@@ -183,7 +183,7 @@
 									<h2>Big Banks</h2>
 								</header>
 								<ul style="text-align: left;">
-									<p class="savestext">Saves up to $4.57</p>
+									<p class="savestext">Saves up to $1.75</p>
 									<li>Increases interchange revenue</li>
 									<li>Eliminates reverse ATM interchange fees</li>
 									<li>Reduces cash usage</li>
@@ -196,7 +196,7 @@
 									<h2>Credit Card Networks</h2>
 								</header>
 								<ul style="text-align: left;">
-									<p class="savestext">Saves up to $4.57</p>
+									<p class="savestext">Saves up to 5 swipe fee transactions</p>
 									<li>Increases interchange revenue</li>
 									<li>Reduces cash usage</li>
 								</ul>
