--- a/home.html
+++ b/home.html
@@ -163,7 +163,7 @@
 
 							</div>
 							<div class="6u$ 12u$(medium) lilbump" style="text-align: center;">
-								<li class="benefits icon alt fa-money" style="color: #34B149;"></li>
+								<li class="benefits icon alt fa-university" style="color: #34B149;"></li>
 								<header class="major" style="padding-top: 3em;">
 									<h2>Small Banks</h2>
 								</header>
@@ -178,7 +178,7 @@
 
 
 							<div class="6u 12u$(medium)" style="text-align: center; margin-top: 4em;">
-								<li class="benefits icon alt fa-university" style="color: #34B149;"></li>
+								<li class="benefits icon alt fa-building" style="color: #34B149;"></li>
 								<header class="major" style="padding-top: 3em;">
 									<h2>Big Banks</h2>
 								</header>
