--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
 					</div>
 					<header class="major">
 						<h2>What is <span style="color: #34B149;">Piddly</span>?</h2>
-						<p>Piddly is a payment platform that aims to eliminate the expensive and inconvenient $20 ATM withdrawals by giving consumers the opportunity to use their phone to withdraw $5, $10, or $20 in cash.</p>
+						<p>Piddly is a mobile application that aims to eliminate the expensive and inconvenient $20 ATM withdrawals by giving consumers the opportunity to use their phone to withdraw $5, $10, or $20 in cash.</p>
 					</header>
 					<ul class="actions">
 						<!--  <li><a href="#" class="button special">Amet magna</a></li>  -->
@@ -227,7 +227,7 @@
 										</span>
 										<p class="littlesmaller">Transactions:</p>
 										<h2 class="littlebigger">66%</h2>
-										<p>under $10 made in cash</p>
+										<p>$10 and under are made in cash</p>
 
 									</div>
 
@@ -236,9 +236,9 @@
 										<span class="image fit mygreenicons">
 											<img src="images/marketsize.png" class="bythenumbersicons" alt="" />
 										</span>
-										<p class="littlesmaller">Market size:</p>
+										<p class="littlesmaller">Market Size:</p>
 										<h2 class="littlebigger">$2.2 Trillion</h2>
-										<p>only two ways to withdrawal $5 or $10</p>
+										<p>only two ways to withdraw $5 or $10</p>
 									</div>
 
 
