changed by the numbers wording

--- a/home.html
+++ b/home.html
@@ -225,9 +225,9 @@
 										<span class="image fit mygreenicons">
 											<img src="images/transactions.png" class="bythenumbersicons" alt="" />
 										</span>
-										<p class="littlesmaller">Transactions:</p>
+										<p class="littlesmaller">Payments:</p>
 										<h2 class="littlebigger">66%</h2>
-										<p>$10 and under are made in cash</p>
+										<p>transactions under $10 made in cash</p>
 
 									</div>
 
